Profile card width issue on mobile fixed

--- a/src/components/ProfileCard/profilecard.css
+++ b/src/components/ProfileCard/profilecard.css
@@ -3,6 +3,7 @@
    border-radius: 10px;
    margin-top: 50px;
    padding: 2rem 1.5rem;
+width:100%;
 }
 
 .profilecard header {
